ingressController/svc-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-clusterip
spec:
  type: ClusterIP #which is by default if not specified. This allows the communication from inside the cluster
  selector:
    app: svc-example #to which pod the service is attached to by the labels
  ports:
    - protocol: TCP
      name: http
      port: 80 # to where the client communicates with the service 
      targetPort: 80 # where the service routes the request to, in this case pod listens to port 80
